--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,217 @@
-<h1>
-  {{title}}
-</h1>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">recrep</a>
+    </div>
+    <div id="navbar" class="navbar-collapse collapse">
+      <form class="navbar-form navbar-right">
+        <input type="text" class="form-control" placeholder="Search...">
+      </form>
+    </div>
+  </div>
+</nav>
+
+<div class="container-fluid">
+
+  <!-- Action Bar -->
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="btn-toolbar" role="toolbar">
+        <div class="btn-group">
+          <label class="btn btn-danger" [(ngModel)]="radioModel" btnRadio="Record" (click)="recordJobModal.show()"><i class="glyphicon glyphicon-record"></i></label>
+        </div>
+      </div>
+    </div>
+    <div class="col-xs-12">
+      <h2></h2>
+    </div>
+  </div>
+
+  <!-- Main Content -->
+  <div class="row">
+    <div class="hidden-xs hidden-sm col-md-4">
+      <ul class="list-group">
+        <li class="list-group-item">Cras justo odio
+          <a (click)="replayJobModal.show()"><i class="glyphicon glyphicon-repeat pull-right"></i></a>
+        </li>
+        <li class="list-group-item">Dapibus ac facilisis in</li>
+        <li class="list-group-item">Morbi leo risus</li>
+        <li class="list-group-item">Porta ac consectetur ac</li>
+        <li class="list-group-item">Vestibulum at eros</li>
+      </ul>
+    </div>
+    <div class="col-sm-12 col-md-8">
+      <div class="row">
+        <div class="col-sm-12 col-md-4">
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <i class="glyphicon glyphicon-repeat gly-spin"></i> Panel heading without title
+            </div>
+            <div class="panel-body">
+              Panel content
+            </div>
+            <div class="panel-footer">
+              <div class="row">
+                <div class="col-sm-12 col-md-12">
+                  <progressbar class="progress-striped" value="22">22%</progressbar>
+                  <div class="btn-toolbar" role="toolbar">
+                    <div class="btn-group">
+                      <label class="btn btn-primary" [(ngModel)]="radioModel" btnRadio="Pause"><i class="glyphicon glyphicon-pause"></i></label>
+                      <label class="btn btn-primary" [(ngModel)]="radioModel" btnRadio="Play"><i class="glyphicon glyphicon-play"></i></label>
+                      <label class="btn btn-primary" [(ngModel)]="radioModel" btnRadio="Stop"><i class="glyphicon glyphicon-eject"></i></label>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-4">
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <i class="glyphicon glyphicon-repeat gly-spin"></i> Panel heading without title
+            </div>
+            <div class="panel-body">
+              Panel content
+            </div>
+            <div class="panel-footer">
+              <div class="row">
+                <div class="col-sm-12 col-md-12">
+                  <progressbar class="progress-striped" value="0">0%</progressbar>
+                  <div class="btn-toolbar" role="toolbar">
+                    <div class="btn-group">
+                      <label class="btn btn-primary" [(ngModel)]="radioModel" btnRadio="Pause"><i class="glyphicon glyphicon-pause"></i></label>
+                      <label class="btn btn-primary" [(ngModel)]="radioModel" btnRadio="Play"><i class="glyphicon glyphicon-play"></i></label>
+                      <label class="btn btn-primary" [(ngModel)]="radioModel" btnRadio="Stop"><i class="glyphicon glyphicon-eject"></i></label>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-4">
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <i class="glyphicon glyphicon-repeat gly-spin"></i> Panel heading without title
+            </div>
+            <div class="panel-body">
+              Panel content
+            </div>
+            <div class="panel-footer">
+              <div class="row">
+                <div class="col-sm-12 col-md-12">
+                  <progressbar class="progress-striped" value="59">59%</progressbar>
+                  <div class="btn-toolbar" role="toolbar">
+                    <div class="btn-group">
+                      <label class="btn btn-primary" [(ngModel)]="radioModel" btnRadio="Pause"><i class="glyphicon glyphicon-pause"></i></label>
+                      <label class="btn btn-primary" [(ngModel)]="radioModel" btnRadio="Play"><i class="glyphicon glyphicon-play"></i></label>
+                      <label class="btn btn-primary" [(ngModel)]="radioModel" btnRadio="Stop"><i class="glyphicon glyphicon-eject"></i></label>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-4">
+          <div class="panel panel-danger">
+            <div class="panel-heading">
+              <i class="glyphicon glyphicon-record text-danger animated infinite tada"></i> Panel heading without title
+            </div>
+            <div class="panel-body">
+              Panel content
+            </div>
+            <div class="panel-footer">
+              <div class="row">
+                <div class="col-sm-12 col-md-12">
+                  <progressbar class="progress-striped" type="danger" value="59">59%</progressbar>
+                  <div class="btn-toolbar" role="toolbar">
+                    <div class="btn-group">
+                      <label class="btn btn-danger" [(ngModel)]="radioModel" btnRadio="Stop"><i class="glyphicon glyphicon-stop"></i></label>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modals -->
+
+  <!-- Record Job -->
+  <div bsModal #recordJobModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" (click)="recordJobModal.hide()" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <h4 class="modal-title">Schedule Record Job</h4>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="form-group">
+              <label for="inputRecordJobName">Record Job Name</label>
+              <input type="text" class="form-control" id="inputRecordJobName" placeholder="Record Job Name">
+            </div>
+            <div class="form-group">
+              <label for="inputDescription">Description</label>
+              <textarea id="inputDescription" class="form-control" placeholder="Description" rows="3"></textarea>
+            </div>
+            <div class="form-group">
+              <div class="row">
+                <div class="col-sm-12 col-md-4 checkbox">
+                  <label>
+                    <input type="checkbox" value="">
+                    TEST JMS Topic 1
+                  </label>
+                </div>
+                <div class="col-sm-12 col-md-4 checkbox">
+                  <label>
+                    <input type="checkbox" value="">
+                    TEST JMS Topic 2
+                  </label>
+                </div>
+                <div class="col-sm-12 col-md-4 checkbox">
+                  <label>
+                    <input type="checkbox" value="">
+                    TEST JMS Topic 3
+                  </label>
+                </div>
+                <div class="col-sm-12 col-md-4 checkbox">
+                  <label>
+                    <input type="checkbox" value="">
+                    TEST JMS Topic 4
+                  </label>
+                </div>
+              </div>
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Replay Job -->
+  <div bsModal #replayJobModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" (click)="replayJobModal.hide()" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <h4 class="modal-title">Schedule Replay Job</h4>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
