--- a/src/app/components/record-job-list/record-job-list.component.html
+++ b/src/app/components/record-job-list/record-job-list.component.html
@@ -1,7 +1,7 @@
 <div class="hidden-xs hidden-sm col-md-4">
   <ul class="list-group">
-    <li class="list-group-item" *ngFor="let recordJob of ( pagedRecordJobs$ | async )">{{recordJob.name}}
-      <a><i class="glyphicon glyphicon-repeat pull-right"></i></a>
+    <li class="list-group-item" *ngFor="let recordJob of ( pagedRecordJobs$ | async )">{{ recordJob.name }}
+      <a href="javascript:void(0);" (click)="replayjobmodal.show(recordJob)"><i class="glyphicon glyphicon-repeat pull-right"></i></a>
     </li>
   </ul>
   <pagination *ngIf="(recordJobs | async )?.length > itemsPerPage"
@@ -10,3 +10,8 @@
               [itemsPerPage]="itemsPerPage"
               (pageChanged)="pageChanged($event)"></pagination>
 </div>
+
+<!-- Replay Job Modal -->
+<rec-replay-job #replayjobmodal="replayjobmodal"
+                [replayEndpoints]="replayEndpoints$ | async"
+                (onOk)="publishReplayJobRequest($event)"></rec-replay-job>
