--- a/src/app/components/record-job-panel/record-job-panel.component.html
+++ b/src/app/components/record-job-panel/record-job-panel.component.html
@@ -1,14 +1,19 @@
-<div class="col-sm-12 col-md-4">
+<div class="col-sm-12 col-md-5">
   <div class="panel panel-danger">
     <div class="panel-heading">
       <i class="glyphicon glyphicon-record text-danger"
-         [ngClass]="{'animated infinite tada' : status === 'active' }"></i> {{ recordJob.name }} {{status}}
+         [ngClass]="{'animated infinite tada' : status === 'active' }"></i> {{ recordJob.name }}
     </div>
     <div class="panel-body">
 
       <div class="row" *ngIf="status === 'scheduled'">
         <div class="col-xs-12">
           <span class="pull-right"><i class="glyphicon glyphicon-time"></i> Starting {{ timeUntilStart }}</span>
+        </div>
+      </div>
+      <div class="row" *ngIf="progress > 0">
+        <div class="col-xs-12">
+          <span class="pull-right"><i class="glyphicon glyphicon-time"></i> Finished {{ timeUntilEnd }}</span>
         </div>
       </div>
 
@@ -20,15 +25,20 @@
                 <div class="col-xs-2">
                   <span class="label label-default">{{ mapping.stage }}</span>
                 </div>
-                <div class="col-xs-10">
-                  {{ mapping.handlerLabel }}
+                <div class="col-xs-7">
+                  <div class="row">
+                    <div class="col-xs-12">
+                      {{ mapping.handlerLabel }}
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-xs-12">
+                      {{ mapping.sourceIdentifierLabel }}
+                    </div>
+                  </div>
                 </div>
-              </div>
-              <div class="row">
-                <div class="col-xs-2">
-                </div>
-                <div class="col-xs-10">
-                  {{ mapping.sourceIdentifierLabel }}
+                <div class="col-xs-3">
+                  <span *ngIf="endpointMetrics[mapping.sourceIdentifier]" class="label label-default pull-right">{{ endpointMetrics[mapping.sourceIdentifier] }}</span>
                 </div>
               </div>
             </li>
@@ -39,14 +49,9 @@
     <div class="panel-footer" *ngIf="status === 'active'">
       <div class="row">
         <div class="col-sm-12 col-md-12">
-          <span class="pull-right"><i class="glyphicon glyphicon-time"></i> Finished {{ timeUntilEnd }}</span>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-12 col-md-12">
           <progressbar class="progress-striped" type="danger" value="{{progress}}"></progressbar>
           <div class="btn-toolbar" role="toolbar">
-            <div class="btn-group">
+            <div class="btn-group" (click)="onCancel.emit(recordJob)">
               <label class="btn btn-danger"  btnRadio="Stop"><i class="glyphicon glyphicon-stop"></i></label>
             </div>
           </div>
