--- a/src/app/components/replay-job-panel/replay-job-panel.component.html
+++ b/src/app/components/replay-job-panel/replay-job-panel.component.html
@@ -1,3 +1,58 @@
-<p>
-  replay-job-panel works!
-</p>
+<div class="col-sm-12 col-md-5">
+  <div class="panel panel-primary">
+    <div class="panel-heading">
+      <i class="glyphicon glyphicon-repeat"
+         [ngClass]="{'gly-spin' : status === 'active' }"></i> {{ replayJob.name }}
+    </div>
+    <div class="panel-body">
+
+      <div class="row" *ngIf="progress > 0">
+        <div class="col-xs-12">
+          <span class="pull-right"><i class="glyphicon glyphicon-time"></i> Finished {{ timeUntilEnd }}</span>
+        </div>
+      </div>
+
+      <div class="row top-buffer">
+        <div class="col-xs-12">
+          <ul class="list-group">
+            <li class="list-group-item" *ngFor="let mapping of replayJob.targetMappings">
+              <div class="row">
+                <div class="col-xs-2">
+                  <span class="label label-default">{{ mapping.stage }}</span>
+                </div>
+                <div class="col-xs-7">
+                  <div class="row">
+                    <div class="col-xs-12">
+                      {{ mapping.handlerLabel }}
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-xs-12">
+                      {{ mapping.sourceIdentifierLabel }}
+                    </div>
+                  </div>
+                </div>
+                <div class="col-xs-3">
+                  <span *ngIf="endpointMetrics[mapping.sourceIdentifier]" class="label label-default pull-right">{{ endpointMetrics[mapping.sourceIdentifier] }}</span>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="panel-footer" *ngIf="status === 'active'">
+      <div class="row">
+        <div class="col-sm-12 col-md-12">
+          <progressbar class="progress-striped" type="primary" value="{{progress}}"></progressbar>
+          <div class="btn-toolbar" role="toolbar">
+            <div class="btn-group" (click)="onCancel.emit(replayJob)">
+              <label class="btn btn-primary"  btnRadio="Stop"><i class="glyphicon glyphicon-stop"></i></label>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
