--- a/src/app/components/replay-job/replay-job.component.html
+++ b/src/app/components/replay-job/replay-job.component.html
@@ -1,3 +1,239 @@
-<p>
-  replay-job works!
-</p>
+<div class="modal fade" bsModal #replayJobModal="bs-modal" [config]="{backdrop: 'static'}"
+     tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-xs-12">
+              <h4 class="modal-title pull-left">Create new Replay Job {{ recordJob?.name }}</h4>
+              <button type="button" class="close pull-right" aria-label="Close" (click)="hide()">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-body">
+        <div class="container-fluid">
+          <form [formGroup]="replayJobForm">
+
+            <div class="row">
+              <div class="col-xs-12">
+                <div class="form-group">
+                  <label for="name">Name</label>
+                  <input type="text" class="form-control" id="name" formControlName="name" required>
+                  <div [hidden]="replayJobForm.controls.name.valid || replayJobForm.controls.name.pristine" class="alert alert-danger">
+                    Name is required
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-xs-12">
+                  <div class="well">
+                    <div class="row">
+                      <div class="col-xs-2">
+                        <label class="pull-right">Record Job</label>
+                      </div>
+                      <div class="col-xs-10">
+                        <span>{{ recordJob?.name }}</span>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-xs-2">
+                        <label class="pull-right">Duration</label>
+                      </div>
+                      <div class="col-xs-10">
+                        <span>{{(recordJob?.timestampEnd - recordJob?.timestampStart) / 1000 }} sec</span>
+                      </div>
+                    </div>
+                  </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-xs-2">
+                <div class="form-group">
+                  <label for="scheduled"> </label>
+                  <div id="scheduled" class="checkbox">
+                    <label>
+                      <input type="checkbox" formControlName="scheduled"> Scheduled
+                    </label>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-xs-2" [hidden]="replayJobForm.controls.scheduled.value !== true">
+                <div class="form-group">
+                  <label for="dateStart">Start Date</label>
+                  <input id="dateStart" type="text" class="form-control" formControlName="dateStart" placeholder="DD.MM.YYYY">
+                </div>
+              </div>
+
+              <div class="col-xs-2" [hidden]="replayJobForm.controls.scheduled.value !== true">
+                <div class="form-group">
+                  <label for="timestampStart">Start Time</label>
+                  <input id="timestampStart" type="text" class="form-control" formControlName="timeStart" placeholder="HH:MM">
+                </div>
+              </div>
+            </div>
+
+
+            <div class="row top-buffer">
+              <div class="col-xs-12">
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h3 class="panel-title">Endpoint Mappings</h3>
+                  </div>
+                  <div class="panel-body">
+                    <!-- Labels -->
+                    <div class="row">
+                      <div class="col-xs-12">
+                        <label for="sourceIdentifier">Source Endpoint Mapping</label>
+                      </div>
+                    </div>
+
+                    <!-- Fields -->
+                    <div class="row">
+                      <div class="col-xs-12">
+                        <select id="sourceIdentifier" class="form-control" formControlName="sourceIdentifier">
+                          <option></option>
+                          <option *ngFor="let sourceMapping of recordJob?.sourceMappings" [value]="sourceMapping.sourceIdentifier">
+                            {{sourceMapping.stage}} | {{sourceMapping.handlerLabel}} | {{sourceMapping.sourceIdentifierLabel}}</option>
+                        </select>
+                      </div>
+                    </div>
+
+                    <!-- Labels -->
+                    <div class="row top-buffer">
+                      <div class="col-xs-2">
+                        <label for="stage">Target Stage</label>
+                      </div>
+                      <div class="col-xs-4" [hidden]="!replayJobForm.controls.stage.value">
+                        <label for="handler">Target Handler</label>
+                      </div>
+                      <div class="col-xs-4" [hidden]="!replayJobForm.controls.handlerLabel.value || !replayJobForm.controls.stage.value">
+                        <label for="targetIdentifier">Target Identifier</label>
+                      </div>
+                      <div class="col-xs-2" [hidden]="!replayJobForm.controls.handlerLabel.value || !replayJobForm.controls.stage.value || !replayJobForm.controls.targetIdentifierLabel.value">
+                        <label for="action"></label>
+                      </div>
+                    </div>
+
+                    <!-- Fields -->
+                    <div class="row">
+                      <div class="col-xs-2">
+                        <select id="stage" class="form-control" formControlName="stage">
+                          <option></option>
+                          <option *ngFor="let stage of (getStages() | async)">{{stage}}</option>
+                        </select>
+                      </div>
+                      <div class="col-xs-4" [hidden]="!replayJobForm.controls.stage.value">
+                        <select id="handler" class="form-control" formControlName="handlerLabel">
+                          <option></option>
+                          <option *ngFor="let handler of (getHandlerLabel(replayJobForm.controls.stage.value) | async)">{{handler}}</option>
+                        </select>
+                      </div>
+                      <div class="col-xs-4" [hidden]="!replayJobForm.controls.handlerLabel.value || !replayJobForm.controls.stage.value">
+                        <select id="targetIdentifier" class="form-control" formControlName="targetIdentifierLabel">
+                          <option></option>
+                          <option *ngFor="let targetIdentifier of (getTargetIdentifierLabel(replayJobForm.controls.stage.value, replayJobForm.controls.handlerLabel.value) | async)">{{targetIdentifier}}</option>
+                        </select>
+                      </div>
+                      <div class="col-xs-2" [hidden]="!replayJobForm.controls.sourceIdentifier.value || !replayJobForm.controls.handlerLabel.value || !replayJobForm.controls.stage.value || !replayJobForm.controls.targetIdentifierLabel.value">
+                        <button id="action" type="button" class="btn btn-default pull-right" (click)="addEndpointMapping()">
+                          <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> Add
+                        </button>
+                      </div>
+                    </div>
+
+
+
+                    <!-- List -->
+                    <div class="row top-buffer">
+                      <div class="col-xs-12">
+                        <ul class="list-group">
+                          <li class="list-group-item" *ngFor="let mapping of replayJobState.endpointMappings">
+                            <div class="row">
+
+                              <div class="col-xs-5">
+                                <div class="row">
+                                  <div class="col-xs-2">
+                                    <div class="col-xs-12">
+                                      <span class="label label-default">{{(getSourceEndpointMapping(mapping.sourceIdentifier) | async).stage }}</span>
+                                    </div>
+                                  </div>
+                                  <div class="col-xs-10">
+                                    <div class="row">
+                                      <div class="col-xs-12">
+                                        <span>{{ (getSourceEndpointMapping(mapping.sourceIdentifier) | async).handlerLabel }}</span>
+                                      </div>
+                                    </div>
+                                    <div class="row">
+                                      <div class="col-xs-12">
+                                        <span>{{ (getSourceEndpointMapping(mapping.sourceIdentifier) | async).sourceIdentifierLabel }}</span>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+
+                              <div class="col-xs-1">
+                                <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span>
+                              </div>
+
+                              <div class="col-xs-5">
+                                <div class="row">
+                                  <div class="col-xs-2">
+                                    <div class="col-xs-12">
+                                      <span class="label label-default">{{mapping.stage }}</span>
+                                    </div>
+                                  </div>
+                                  <div class="col-xs-10">
+                                    <div class="row">
+                                      <div class="col-xs-12">
+                                        <span>{{ mapping.handlerLabel }}</span>
+                                      </div>
+                                    </div>
+                                    <div class="row">
+                                      <div class="col-xs-12">
+                                        <span>{{ mapping.targetIdentifierLabel }}</span>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+
+                              <div class="col-xs-1">
+                                <span class="glyphicon glyphicon-trash pull-right" aria-hidden="true" (click)="removeEndpointMapping(mapping)"></span>
+                              </div>
+                            </div>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </form>
+        </div>
+      </div>
+
+      <div class="modal-footer">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-xs-12">
+              <button type="button" class="btn btn-danger" (click)="hide()">Cancel</button>
+              <button type="button" class="btn btn-primary" (click)="publish()" [disabled]="!replayJobForm.valid">OK</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
