--- a/src/app/containers/app.html
+++ b/src/app/containers/app.html
@@ -37,14 +37,23 @@
       <!-- active record jobs -->
       <rec-record-job-panel *ngFor="let activeRecordJob of ( activeRecordJobs$ | async )"
                             [recordJob]="activeRecordJob"
-                            [status]="'active'">
+                            [status]="'active'"
+                            (onCancel)="publishRecordJobCancelRequest($event)">
       </rec-record-job-panel>
 
       <!-- scheduled record jobs -->
       <rec-record-job-panel *ngFor="let scheduledRecordJob of ( scheduledRecordJobs$ | async )"
                             [recordJob]="scheduledRecordJob"
-                            [status]="'scheduled'">
+                            [status]="'scheduled'"
+                            (onCancel)="publishRecordJobCancelRequest($event)">
       </rec-record-job-panel>
+
+      <!-- active replay jobs -->
+      <rec-replay-job-panel *ngFor="let activeReplayJob of ( activeReplayJobs$ | async )"
+                            [replayJob]="activeReplayJob"
+                            [status]="'active'"
+                            (onCancel)="publishReplayJobCancelRequest($event)">
+      </rec-replay-job-panel>
 
     </div>
 
@@ -159,6 +168,7 @@
                   (onOk)="publishRecordJobRequest($event)">
 
   </rec-record-job>
+
 
   <!-- Record Job -->
   <!--div bsModal #recordJobModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
