--- a/src/app/components/record-job-panel/record-job-panel.component.html
+++ b/src/app/components/record-job-panel/record-job-panel.component.html
@@ -22,9 +22,11 @@
           <ul class="list-group">
             <li class="list-group-item" *ngFor="let mapping of recordJob.sourceMappings">
               <div class="row">
-                <div class="col-xs-2">
+                <div class="col-xs-6">
                   <span class="label label-default">{{ mapping.stage }}</span>
                 </div>
+              </div>
+              <div class="row">
                 <div class="col-xs-7">
                   <div class="row">
                     <div class="col-xs-12">
@@ -37,8 +39,23 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xs-3">
-                  <span *ngIf="endpointMetrics[mapping.sourceIdentifier]" class="label label-default pull-right">{{ endpointMetrics[mapping.sourceIdentifier] }}</span>
+                <div class="col-xs-5" *ngIf="endpointMetrics[mapping.sourceIdentifier]">
+                  <div class="row">
+                    <div class="col-xs-12">
+                      <span class="label label-default">
+                        <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>  {{ endpointMetrics[mapping.sourceIdentifier].messageCount }}
+                      </span>
+                      &nbsp;
+                      <span class="label label-default">
+                        <span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>  {{ endpointMetrics[mapping.sourceIdentifier].messageRateSecond | number:'1.2-2' }} / sec
+                      </span>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-xs-12">
+                      <span class="label label-default"><span class="glyphicon glyphicon-hdd" aria-hidden="true"></span> {{ endpointMetrics[mapping.sourceIdentifier].messageSizeBytes / 1024 / 1024 | number:'1.3-3' }} mb</span>
+                    </div>
+                  </div>
                 </div>
               </div>
             </li>
