--- a/src/app/components/replay-job/replay-job.component.html
+++ b/src/app/components/replay-job/replay-job.component.html
@@ -160,11 +160,11 @@
 
                               <div class="col-xs-5">
                                 <div class="row">
-                                  <div class="col-xs-2">
-                                    <div class="col-xs-12">
-                                      <span class="label label-default">{{(getSourceEndpointMapping(mapping.sourceIdentifier) | async).stage }}</span>
-                                    </div>
+                                  <div class="col-xs-12">
+                                    <span class="label label-default">{{(getSourceEndpointMapping(mapping.sourceIdentifier) | async).stage }}</span>
                                   </div>
+                                </div>
+                                <div class="row">
                                   <div class="col-xs-10">
                                     <div class="row">
                                       <div class="col-xs-12">
@@ -186,11 +186,11 @@
 
                               <div class="col-xs-5">
                                 <div class="row">
-                                  <div class="col-xs-2">
-                                    <div class="col-xs-12">
-                                      <span class="label label-default">{{mapping.stage }}</span>
-                                    </div>
+                                  <div class="col-xs-12">
+                                    <span class="label label-default">{{mapping.stage }}</span>
                                   </div>
+                                </div>
+                                <div class="row">
                                   <div class="col-xs-10">
                                     <div class="row">
                                       <div class="col-xs-12">
