--- a/src/app/components/replay-job/replay-job.component.html
+++ b/src/app/components/replay-job/replay-job.component.html
@@ -49,6 +49,40 @@
                         <span>{{(recordJob?.timestampEnd - recordJob?.timestampStart) / 1000 }} sec</span>
                       </div>
                     </div>
+                    <div class="row">
+                      <div class="col-xs-2">
+                        <label class="pull-right">Records</label>
+                      </div>
+                      <div class="col-xs-10">
+                        {{ totalMessageCount() }} Messages (Total Size: {{ totalMessageSizeMb() / 1024 / 1024 | number:'1.3-3' }} mb)
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-xs-2">
+                        <label class="pull-right">Endpoints</label>
+                      </div>
+                      <div class="col-xs-10">
+                        <ul class="list-group">
+                          <li class="list-group-item" *ngFor="let sourceMapping of recordJob?.sourceMappings">
+                            <div class="container-fluid">
+                              <div class="row">
+                                <div class="col-xs-9">
+                                  <div><span class="label label-default">{{ sourceMapping.stage }}</span></div>
+                                  <div>{{ sourceMapping.handlerLabel }}</div>
+                                  <div>{{ sourceMapping.sourceIdentifierLabel }}</div>
+                                  <div *ngIf="sourceMapping.properties.headerFilter"><span class="glyphicon glyphicon-filter" aria-hidden="true"></span> {{ sourceMapping.properties.headerFilter }}</div>
+                                </div>
+                                <div class="col-xs-3">
+                                  <div><small><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> {{ sourceMapping.metrics.messageCount }}</small></div>
+                                  <div><small><span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>  {{ sourceMapping.metrics.messageRateSecond | number:'1.2-2' }} / sec</small></div>
+                                  <div><small><span class="glyphicon glyphicon-hdd" aria-hidden="true"></span> {{ sourceMapping.metrics.messageSizeBytes / 1024 / 1024 | number:'1.3-3' }} mb</small></div>
+                                </div>
+                              </div>
+                            </div>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
                   </div>
               </div>
             </div>
