--- a/src/app/components/record-job-panel/record-job-panel.component.html
+++ b/src/app/components/record-job-panel/record-job-panel.component.html
@@ -27,7 +27,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-xs-7">
+                <div class="col-xs-8">
                   <div class="row">
                     <div class="col-xs-12">
                       {{ mapping.handlerLabel }}
@@ -38,23 +38,21 @@
                       {{ mapping.sourceIdentifierLabel }}
                     </div>
                   </div>
-                </div>
-                <div class="col-xs-5" *ngIf="endpointMetrics[mapping.sourceIdentifier]">
-                  <div class="row">
+                  <div class="row" *ngIf="mapping.properties.headerFilter">
                     <div class="col-xs-12">
-                      <span class="label label-default">
-                        <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>  {{ endpointMetrics[mapping.sourceIdentifier].messageCount }}
-                      </span>
-                      &nbsp;
-                      <span class="label label-default">
-                        <span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>  {{ endpointMetrics[mapping.sourceIdentifier].messageRateSecond | number:'1.2-2' }} / sec
-                      </span>
+                      <span class="glyphicon glyphicon-filter" aria-hidden="true"></span> {{ mapping.properties.headerFilter }}
                     </div>
                   </div>
-                  <div class="row">
-                    <div class="col-xs-12">
-                      <span class="label label-default"><span class="glyphicon glyphicon-hdd" aria-hidden="true"></span> {{ endpointMetrics[mapping.sourceIdentifier].messageSizeBytes / 1024 / 1024 | number:'1.3-3' }} mb</span>
-                    </div>
+                </div>
+                <div class="col-xs-4" *ngIf="endpointMetrics[mapping.sourceIdentifier]">
+                  <div>
+                    <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>  {{ endpointMetrics[mapping.sourceIdentifier].messageCount }}
+                  </div>
+                  <div>
+                    <span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>  {{ endpointMetrics[mapping.sourceIdentifier].messageRateSecond | number:'1.2-2' }} / sec
+                  </div>
+                  <div>
+                    <span class="glyphicon glyphicon-hdd" aria-hidden="true"></span> {{ endpointMetrics[mapping.sourceIdentifier].messageSizeBytes / 1024 / 1024 | number:'1.3-3' }} mb
                   </div>
                 </div>
               </div>
