--- a/src/app/containers/app.html
+++ b/src/app/containers/app.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">recrep</a>
+      <a class="navbar-brand" href="#">messaging testtool</a>
     </div>
     <div class="navbar-header navbar-right">
       <rec-network-status class="navbar-text"></rec-network-status>
