--- a/src/app/components/record-job-panel/record-job-panel.component.html
+++ b/src/app/components/record-job-panel/record-job-panel.component.html
@@ -27,7 +27,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-xs-8">
+                <div class="col-xs-12">
                   <div class="row">
                     <div class="col-xs-12">
                       {{ mapping.handlerLabel }}
@@ -44,16 +44,16 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xs-4" *ngIf="endpointMetrics[mapping.sourceIdentifier]">
-                  <div *ngIf="recordJob.timestampEnd">
-                    <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>  {{ endpointMetrics[mapping.sourceIdentifier].messageCount }}
-                  </div>
-                  <div>
-                    <span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>  {{ endpointMetrics[mapping.sourceIdentifier].messageRateSecond | number:'1.2-2' }} / sec
-                  </div>
-                  <div *ngIf="recordJob.timestampEnd">
-                    <span class="glyphicon glyphicon-hdd" aria-hidden="true"></span> {{ endpointMetrics[mapping.sourceIdentifier].messageSizeBytes / 1024 / 1024 | number:'1.3-3' }} mb
-                  </div>
+              </div>
+              <div class="row" *ngIf="endpointMetrics[mapping.sourceIdentifier]">
+                <div class="col-xs-4">
+                  <span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>  {{ endpointMetrics[mapping.sourceIdentifier].messageRateSecond | number:'1.2-2' }} / sec
+                </div>
+                <div class="col-xs-4" *ngIf="recordJob.timestampEnd">
+                  <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>  {{ endpointMetrics[mapping.sourceIdentifier].messageCount }}
+                </div>
+                <div class="col-xs-4" *ngIf="recordJob.timestampEnd">
+                  <span class="glyphicon glyphicon-hdd" aria-hidden="true"></span> {{ endpointMetrics[mapping.sourceIdentifier].messageSizeBytes / 1024 / 1024 | number:'1.3-3' }} mb
                 </div>
               </div>
             </li>
@@ -69,6 +69,9 @@
             <div class="btn-group" (click)="onCancel.emit(recordJob)">
               <label class="btn btn-danger"  btnRadio="Stop"><i class="glyphicon glyphicon-stop"></i></label>
             </div>
+          </div>
+          <div>
+            {{ jobMetrics.diskSizeUsed }}
           </div>
         </div>
       </div>
