--- a/src/app/components/replay-job-panel/replay-job-panel.component.html
+++ b/src/app/components/replay-job-panel/replay-job-panel.component.html
@@ -22,7 +22,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-xs-7">
+                <div class="col-xs-12">
                   <div class="row">
                     <div class="col-xs-12">
                       {{ mapping.handlerLabel }}
@@ -34,23 +34,16 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xs-5" *ngIf="endpointMetrics[mapping.sourceIdentifier]">
-                  <div class="row">
-                    <div class="col-xs-12">
-                      <span class="label label-default">
-                        <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>  {{ endpointMetrics[mapping.sourceIdentifier].messageCount }}
-                      </span>
-                      &nbsp;
-                      <span class="label label-default">
-                        <span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>  {{ endpointMetrics[mapping.sourceIdentifier].messageRateSecond | number:'1.2-2' }} / sec
-                      </span>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-xs-12">
-                      <span class="label label-default"><span class="glyphicon glyphicon-hdd" aria-hidden="true"></span>  {{ endpointMetrics[mapping.sourceIdentifier].messageSizeBytes / 1024 / 1024 | number:'1.3-3' }} mb</span>
-                    </div>
-                  </div>
+              </div>
+              <div class="row" *ngIf="endpointMetrics[mapping.sourceIdentifier]">
+                <div class="col-xs-4">
+                  <span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>  {{ endpointMetrics[mapping.sourceIdentifier].messageRateSecond | number:'1.2-2' }} / sec
+                </div>
+                <div class="col-xs-4">
+                  <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>  {{ endpointMetrics[mapping.sourceIdentifier].messageCount }}
+                </div>
+                <div class="col-xs-4">
+                  <span class="glyphicon glyphicon-hdd" aria-hidden="true"></span> {{ endpointMetrics[mapping.sourceIdentifier].messageSizeBytes / 1024 / 1024 | number:'1.3-3' }} mb
                 </div>
               </div>
             </li>
