--- a/src/app/components/record-job-panel/record-job-panel.component.html
+++ b/src/app/components/record-job-panel/record-job-panel.component.html
@@ -53,7 +53,7 @@
                   <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>  {{ endpointMetrics[mapping.sourceIdentifier].messageCount }}
                 </div>
                 <div class="col-xs-4" *ngIf="recordJob.timestampEnd">
-                  <span class="glyphicon glyphicon-hdd" aria-hidden="true"></span> {{ endpointMetrics[mapping.sourceIdentifier].messageSizeBytes / 1024 / 1024 | number:'1.3-3' }} mb
+                  <span class="glyphicon glyphicon-hdd" aria-hidden="true"></span> {{ endpointMetrics[mapping.sourceIdentifier].messageSizeBytes / 1024 / 1024 | number:'1.3-3' }} MB
                 </div>
               </div>
             </li>
@@ -64,14 +64,15 @@
     <div class="panel-footer" *ngIf="status === 'active'">
       <div class="row">
         <div class="col-sm-12 col-md-12">
-          <progressbar *ngIf="recordJob.timestampEnd" class="progress-striped" type="danger" value="{{progress}}"></progressbar>
+          <progressbar *ngIf="recordJob.timestampEnd" class="progress-striped" type="danger" value="{{progress}}">
+          </progressbar>
+          <div *ngIf="!recordJob.timestampEnd && jobMetrics.diskSizeUsed" class="pull-right">
+            <span class="glyphicon glyphicon-hdd" aria-hidden="true"></span> {{ jobMetrics.diskSizeUsed / 1024 / 1024 | number:'1.3-3' }} MB (Available {{ jobMetrics.diskSizeAvailable / 1024 / 1024 | number:'1.3-3' }} MB)
+          </div>
           <div class="btn-toolbar" role="toolbar">
             <div class="btn-group" (click)="onCancel.emit(recordJob)">
               <label class="btn btn-danger"  btnRadio="Stop"><i class="glyphicon glyphicon-stop"></i></label>
             </div>
-          </div>
-          <div>
-            {{ jobMetrics.diskSizeUsed }}
           </div>
         </div>
       </div>
